refactor: centralize world acceleration scheduling